--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
 		</dependency>
 
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.3.1</version> <!-- O la versión que estés usando -->
+		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
