--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-# Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:53595/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/musicas
 spring.datasource.username=root
-spring.datasource.password=LIZZkkzehkPIeXFvCgXmvUwaLqjrVyxF
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Configuración JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.jpa.hibernate.ddl-auto=update
