--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.3.0</version> <!-- Asegúrate de usar una versión compatible -->
+				<version>3.3.0</version>
 				<configuration>
-					<encoding>UTF-8</encoding> <!-- Asegúrate de que el encoding esté configurado -->
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
